# app_test

./: CMakeLists.txt  CMakePresets.json  doxyfile.txt
.github/workflows/: doxygen.yml
conf/: doxyfile.txt  file_tree.txt  keybindings.json.txt  mainpage.txt  property.txt
inc/: common_def.h
inc/app/app_test/core/: app_test.h  app_test.hpp  app_test_c.h  app_test_def.h  app_test_sub.h
inc/app/program/: program.h  program.hpp  program_c.h  program_def.h  program_sub.h
inc/lib/lib_common/core/: lib_common.h  lib_common.hpp  lib_common_c.h  lib_common_def.h  lib_common_sub.h
res/app/app_test/: app_test.manifest  res_app_test.h  res_app_test.rc
res/app/program/: res_program.rc
res/lib/lib_common/: res_lib_common.h  res_lib_common.rc
src/app/app_test/core/: app_test.cpp  app_test_c.c  app_test_sub.cpp
src/app/program/: program.cpp  program_c.c  program_main.cpp  program_sub.cpp
src/lib/lib_common/core/: lib_common.cpp  lib_common_c.c  lib_common_sub.cpp
targets/app/dynamic/app_test/: CMakeLists.txt
targets/app/dynamic/program/: CMakeLists.txt
targets/app/static/static_app_test/: CMakeLists.txt
targets/app/static/static_program/: CMakeLists.txt
targets/lib/dynamic/lib_common/: CMakeLists.txt
targets/lib/static/static_lib_common/: CMakeLists.txt
